force-app/main/default/objects/TrackIT__Duration_Time__c/TrackIT__Duration_Time__c.object-meta.xml
<CustomObject>
    <description>Custom object to store duration time of assigned out items.</description>
    <label>Duration Time</label>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duration Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>