force-app/main/default/objects/TrackIT__Duration_Time__c/fields/TrackIT__Assignee__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Assignee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>TrackIT__Assignee__c</referenceTo>
    <relationshipLabel>Duration Times</relationshipLabel>
    <relationshipName>Duration_Times</relationshipName>
    <type>Lookup</type>
</CustomField>