force-app/main/default/objects/TrackIT__Duration_Time__c/fields/TrackIT__Duration__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Duration__c</fullName>
    <label>Duration</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>