force-app/main/default/objects/TrackIT__Duration_Time__c/fields/TrackIT__End_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__End_Time__c</fullName>
    <description>The date and time when an item is assigned in</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>