force-app/main/default/objects/TrackIT__Duration_Time__c/fields/TrackIT__Item__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Item__c</fullName>
    <label>Item</label>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipLabel>Duration Times</relationshipLabel>
    <relationshipName>Duration_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>