force-app/main/default/objects/TrackIT__Duration_Time__c/fields/TrackIT__Rental_Charge_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Rental_Charge_Per_Day__c</fullName>
    <label>Rental Charge Per Day</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>