force-app/main/default/objects/TrackIT__Duration_Time__c/fields/TrackIT__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Start_Time__c</fullName>
    <description>The start day and time when an item is assigned out</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>