force-app/main/default/objects/TrackIT__Duration_Time__c/fields/TrackIT__Total_Rental_Charge__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Total_Rental_Charge__c</fullName>
    <label>Total Rental Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>