force-app/main/default/objects/TrackIT__Duration_Time__c/validationRules/TrackIT__Duration_ID_Change_After_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>TrackIT__Duration_ID_Change_After_Creation_Rule</fullName>
    <active>true</active>
    <description>Prevents users from changing Duration Time ID after the record is created.</description>
    <errorConditionFormula>IF(ISNULL( PRIORVALUE( Name )),FALSE,ISCHANGED( Name ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Duration Time Record ID cannot be changed after initial creation.</errorMessage>
</ValidationRule>