force-app/main/default/objects/TrackIT__Duration_Time__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Item__c</columns>
    <columns>TrackIT__Start_Time__c</columns>
    <columns>TrackIT__End_Time__c</columns>
    <columns>TrackIT__Duration__c</columns>
    <columns>TrackIT__Total_Rental_Charge__c</columns>
    <columns>TrackIT__Assignee__c</columns>
    <columns>TrackIT__Record_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>